Fixed no transform animation when picking up pans  + minor spacing fixes

--- a/src/Palette/Palette.css
+++ b/src/Palette/Palette.css
@@ -3,11 +3,3 @@
     background-repeat: no-repeat;
     border: red 2px solid;
 }
-
-.casing{
-    width: 80%;
-    height: 80%;
-}
-.container{
-    position: absolute;
-}
